# expense-tracker

./: README.md  data.json  expense-tracker.py  expenses.json  pyproject.toml
